--- a/index.html
+++ b/index.html
@@ -1,5 +1,128 @@
-<h1>
-Bem vindo ao meu site, por enquanto só tem isso! ;)
-</h1>
+<!DOCTYPE html>
+<html>
 
-<u>aprendendo<u/>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <link rel="shortcut icon"
+        href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGlcp0bf7gFMKVzENiExXg3vYpMyo7Lfrjkg&usqp=CAU"
+        type="image/x-icon">
+    <title> Gabriel Candido | Inicio </title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <!--CSS -->
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/main.css'>
+</head>
+
+<body class="bg-dark container pt-4">
+    <header class="row">
+        <section class="col">
+            <div class="card">
+                <div class="card-body">
+                    <section class="row">
+                        <div class="col-2">
+                            <img class="w-100 rounded-circle img-thumbnail"
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCeWrmG_zVljXlqp5u4GKTZYiy2AmfIbl-1w&usqp=CAU"
+                                alt="Profile">
+                        </div>
+                        <div class="col">
+                            <h1 class="display-4">Gabriel Candido</h1>
+                            <hr>
+                            <a href="/index.html" class="btn btn-primary btn-sm">Inicio</a>
+                            <a href="/curriculo.html" class="btn btn-outline-primary btn-sm">Curriculo</a>
+                            <a href="/contato.html" class="btn btn-outline-primary btn-sm">Contato</a>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </section>
+    </header>
+
+    <main class="mt-2">
+        <section class="col">
+            <div class="card">
+                <div class="card-header">Inicio</div>
+                <div class="card-body">
+                    <h2>Bem vindo a minha página pessoal</h2>
+                    <h3>Estou me capacitando em desenvolvimento full stack, veja minha trajetória acadêmica</h3>
+                   
+                    <table class="table table-bordered table-hover table-striped">
+                        <thead>
+                            <th>Conhecimento</th>
+                            <th>Detalhe</th>
+                            <th>Nível</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td colspan="3" class="text-center">
+                                    Entra21
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Métodologia agéis</td>
+                                <td>Scrum, Kanban, Git</td>
+                                <td>Básico, mas práticado o curso todo</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+
+
+                    </table>
+
+                </div>
+                <div class="card-footer">
+                    <footer>
+
+
+                    </footer>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
+
+
+
+
+
+
+
+
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+
+
+</body>
+
+</html>
